# pyAtmosLogger

./: .readthedocs.yaml  CITATION.cff  CITATION.cff   LICENSE.txt  README.md  configuration.yaml  configuration.yml  main.py  pyAtmosLogger.py  pyproject.toml  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
docs/: api.rst  changelog.rst  cli.rst  conf.py  index.rst  installation.rst  instruments.rst  requirements.txt  usage.rst
docs/instruments/: bronkhorst_mfc_default.rst  ott_parsivel2_actris.rst  ott_parsivel2_default.rst  pyAtmosLogger_dummy_1.rst  thies_laserprecipitationmonitor_actris.rst  tsi_ops3330_default.rst
docs/source/: conf.py  index.rst  installation.rst  instruments.rst  usage.rst
pyAtmosLogger/: __init__.py  pyAtmosLogger.py  utils.py
pyAtmosLogger/instruments/: __init__.py  bronkhorst_mfc_default.py  ott_parsivel2_actris.py  ott_parsivel2_default.py  ott_parsivel2_default.yaml  pyAtmosLogger_dummy_1.py  pyAtmosLogger_dummy_1.yaml  sds011.py  thies_laserprecipitationmonitor_actris.py  tsi_ops3330_default.py
pyAtmosLogger/utils/: utils.py
