[tool.poetry]
name = "pyAtmosLogger"
version = "0.1"
description = "Python Data Logger for Atmospheric Application"
authors = ["Marcus G. Müller <marc.mueller@fz-juelich.de>"]
readme = "README.md"
packages = [{include = "pyAtmosLogger"}]


[tool.poetry.scripts]
pyAtmosLogger = "pyAtmosLogger.pyAtmosLogger:pyAtmosLogger"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4"
pyyaml = "^6.0"
xarray = "^2022.03.0"
pandas = "^2.0.3"
sds011 = "^0.2.0"
pySerial ="^3.4"
scipy = "^1.7.2"
numpy = "^1.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
