[metadata]
name = pyAtmosLogger
version = 0.1.0
author = Marcus G. Müller
author_email = marc.mueller@fz-juelich.de
description = Python Data Logger for Atmospheric Application 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/marcusgmueller/pyAtmosLogger
project_urls =
    Bug Tracker = https://github.com/marcusgmueller/pyAtmosLogger/issues
    repository = https://github.com/marcusgmueller/pyAtmosLogger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    pyAtmosLogger
    pyAtmosLogger.instruments
    pyAtmosLogger.utils
install_requires =
    argparse
    pyyaml
    xarray
    pandas
    sds011
    pyserial

[options.entry_points]
console_scripts =
    pyAtmosLogger = pyAtmosLogger.pyAtmosLogger:pyAtmosLogger